# Mammuth

./: .gitignore  ARRAY_SYNTAX_GUIDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MAMMUTH_GUIDE_COMPLETE.md  README.md
examples/: test_array_cstyle.mmt  test_comments.mmt  test_complete_suite.mmt  test_filter_simple.mmt
runtime/: random.h  utf8.h
src/: ast.h  debug.h  driver.cpp  driver.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  range.h  scope.h  transpiler_cpp.cpp  transpiler_cpp.h  utf8.h  value.h
